...
                                <viewLayoutGuide key="contentLayoutGuide" id="Jt6-8x-WgK"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="IgW-em-qYK"/>
                                <connections>
                                    <outlet property="delegate" destination="xbA-gh-8mO" id="VI8-vd-0ef"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6yK-4Q-f3O" userLabel="BackButton">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="O1p-xe-ixT"/>
                                    <constraint firstAttribute="width" constant="48" id="m2z-IE-NOt"/>
                                </constraints>
...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="J9n-Ei-tBd" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="twl-ul-3vW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="315-mr-1JU" userLabel="Authenticate">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Wpe-9d-fPS"/>
                                </constraints>
...
