...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.navigationDelegate = self
        observeWebViewProgress()
        presenter?.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        observeWebViewProgress()
    }
...
